--- a/RetroCalculator/Base.lproj/LaunchScreen.storyboard
+++ b/RetroCalculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,56 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="eez-aK-DXm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="6E2-7f-35S">
+                                <rect key="frame" x="0.0" y="517" width="375" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="sJm-DD-M3m"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="y4t-NB-ZUv">
+                                <rect key="frame" x="54" y="20" width="266" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="e2i-Yz-Ol2"/>
+                                    <constraint firstAttribute="width" constant="266" id="uQg-ae-Aiv"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="Jyu-NZ-i2d">
+                                <rect key="frame" x="67" y="104" width="269" height="143"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="269" id="BAo-i6-iYv"/>
+                                    <constraint firstAttribute="height" constant="143" id="uvh-0C-Qja"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Jyu-NZ-i2d" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FRS-1Y-8qb"/>
+                            <constraint firstAttribute="trailing" secondItem="eez-aK-DXm" secondAttribute="trailing" id="MDm-ig-bCN"/>
+                            <constraint firstItem="eez-aK-DXm" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="OcM-AR-siB"/>
+                            <constraint firstItem="6E2-7f-35S" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="QRA-2h-98F"/>
+                            <constraint firstItem="y4t-NB-ZUv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Yf5-cM-4ZX"/>
+                            <constraint firstItem="y4t-NB-ZUv" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="a4b-at-S0h"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="eez-aK-DXm" secondAttribute="bottom" id="cMl-gv-3bu"/>
+                            <constraint firstItem="Jyu-NZ-i2d" firstAttribute="top" secondItem="y4t-NB-ZUv" secondAttribute="bottom" constant="8" id="fal-ci-Nyu"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="6E2-7f-35S" secondAttribute="bottom" id="lVW-ED-HI5"/>
+                            <constraint firstAttribute="trailing" secondItem="6E2-7f-35S" secondAttribute="trailing" id="mCS-4f-Jrs"/>
+                            <constraint firstItem="eez-aK-DXm" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="zvh-FD-mBm"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
